--- a/pom.xml
+++ b/pom.xml
@@ -40,16 +40,16 @@
 <project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="http://maven.apache.org/POM/4.0.0"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
-    <groupId>com.harman.ignite</groupId>
-    <artifactId>ignite-transformers</artifactId>
-    <version>3.0.3</version>
-    <name>ignite-transformers</name>
-    <description>Contains Ignite Transformer to convert data in any format to IgniteEvents</description>
+    <groupId>com.eclipse.ecsp</groupId>
+    <artifactId>transformers</artifactId>
+    <version>1.0-SNAPSHOT</version>
+    <name>transformers</name>
+    <description>Contains transformers to convert data to various types of events</description>
     <url>http://maven.apache.org</url>
 
     <scm>
-        <connection>scm:git:https://github.com/HARMAN-Automotive/transformers.git</connection>
-        <url>https://github.com/HARMAN-Automotive/transformers</url>
+        <connection>scm:git:https://github.com/eclipse-ecsp/transformers.git</connection>
+        <url>https://github.com/eclipse-ecsp/transformers</url>
         <tag>HEAD</tag>
     </scm>
 
@@ -62,18 +62,18 @@
 
     <issueManagement>
         <system>GitHub</system>
-        <url>https://github.com/HARMAN-Automotive/transformers/issues</url>
+        <url>https://github.com/eclipse-ecsp/transformers/issues</url>
     </issueManagement>
 
     <organization>
-        <url>https://github.com/HARMAN-Automotive</url>
-        <name>HARMAN Automotive</name>
+        <url>https://github.com/eclipse-ecsp</url>
+        <name>eclipse-ecsp</name>
     </organization>
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <spring.test.version>5.3.34</spring.test.version>
-        <ignite.utils.version>3.0.3</ignite.utils.version>
+        <utils.version>1.0-SNAPSHOT</utils.version>
         <maven.surefire.version>2.18.1</maven.surefire.version>
         <!--Checkstyle plugin properties -->
         <checkstyle.version>10.13.0</checkstyle.version>
@@ -114,14 +114,14 @@
         <repository>
             <id>github</id>
             <name>GitHub OWNER Apache Maven Packages</name>
-            <url>https://maven.pkg.github.com/harman-automotive/csp-central-repo</url>
+            <url>https://maven.pkg.github.com/eclipse-ecsp/transformers</url>
         </repository>
     </distributionManagement>
 
     <repositories>
         <repository>
             <id>github</id>
-            <url>https://maven.pkg.github.com/harman-automotive/csp-central-repo</url>
+            <url>https://maven.pkg.github.com/eclipse-ecsp</url>
             <snapshots>
                 <enabled>true</enabled>
             </snapshots>
@@ -130,9 +130,9 @@
 
     <dependencies>
         <dependency>
-            <groupId>com.harman.ignite</groupId>
-            <artifactId>ignite-utils</artifactId>
-            <version>${ignite.utils.version}</version>
+            <groupId>com.eclipse.ecsp</groupId>
+            <artifactId>utils</artifactId>
+            <version>${utils.version}</version>
         </dependency>
         <dependency>
             <groupId>junit</groupId>
