--- a/pom.xml
+++ b/pom.xml
@@ -121,7 +121,14 @@
     <repositories>
         <repository>
             <id>github</id>
-            <url>https://maven.pkg.github.com/eclipse-ecsp</url>
+            <url>https://maven.pkg.github.com/eclipse-ecsp/utils</url>
+            <snapshots>
+                <enabled>true</enabled>
+            </snapshots>
+        </repository>
+        <repository>
+            <id>github</id>
+            <url>https://maven.pkg.github.com/eclipse-ecsp/entities</url>
             <snapshots>
                 <enabled>true</enabled>
             </snapshots>
